docs/api/0.2.1/ironwood/ds/LongArrayList.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.1**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# LongArrayList

**Class** · `ironwood.ds.LongArrayList`

```java
public class LongArrayList implements Iterable<LongHolder>
```

**Implements:** [`Iterable<LongHolder>`](../lang/Iterable.md)


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) |  |
| [`DEFAULT_GROWTH_FACTOR`](#member-DEFAULT_GROWTH_FACTOR) |  |
| [`LongArrayList()`](#member-LongArrayList-28--29-) |  |
| [`LongArrayList(int)`](#member-LongArrayList-28-int-29-) |  |
| [`LongArrayList(float)`](#member-LongArrayList-28-float-29-) |  |
| [`LongArrayList(int,float)`](#member-LongArrayList-28-int-2c-float-29-) |  |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) |  |
| [`getGrowthFactor()`](#member-getGrowthFactor-28--29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`add(long)`](#member-add-28-long-29-) |  |
| [`addLast(long)`](#member-addLast-28-long-29-) |  |
| [`addFirst(long)`](#member-addFirst-28-long-29-) |  |
| [`removeFirst()`](#member-removeFirst-28--29-) |  |
| [`removeLast()`](#member-removeLast-28--29-) |  |
| [`insert(int,long)`](#member-insert-28-int-2c-long-29-) |  |
| [`get(int)`](#member-get-28-int-29-) |  |
| [`set(int,long)`](#member-set-28-int-2c-long-29-) |  |
| [`remove(int)`](#member-remove-28-int-29-) |  |
| [`contains(long)`](#member-contains-28-long-29-) |  |
| [`indexOf(long)`](#member-indexOf-28-long-29-) |  |
| [`lastIndexOf(long)`](#member-lastIndexOf-28-long-29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 64;
```


[Back to member summary](#member-summary)

<a name="member-DEFAULT_GROWTH_FACTOR"></a>

### `DEFAULT_GROWTH_FACTOR`

```java
public static final float DEFAULT_GROWTH_FACTOR = 1.75f;
```


[Back to member summary](#member-summary)

## Constructors

<a name="member-LongArrayList-28--29-"></a>

### `LongArrayList()`

```java
public LongArrayList()
```


[Back to member summary](#member-summary)

<a name="member-LongArrayList-28-int-29-"></a>

### `LongArrayList(int)`

```java
public LongArrayList(int initialCapacity)
```


[Back to member summary](#member-summary)

<a name="member-LongArrayList-28-float-29-"></a>

### `LongArrayList(float)`

```java
public LongArrayList(float growthFactor)
```


[Back to member summary](#member-summary)

<a name="member-LongArrayList-28-int-2c-float-29-"></a>

### `LongArrayList(int,float)`

```java
public LongArrayList(int initialCapacity, float growthFactor)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```


[Back to member summary](#member-summary)

<a name="member-getGrowthFactor-28--29-"></a>

### `getGrowthFactor()`

```java
public float getGrowthFactor()
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-add-28-long-29-"></a>

### `add(long)`

```java
public void add(long element)
```


[Back to member summary](#member-summary)

<a name="member-addLast-28-long-29-"></a>

### `addLast(long)`

```java
public void addLast(long element)
```


[Back to member summary](#member-summary)

<a name="member-addFirst-28-long-29-"></a>

### `addFirst(long)`

```java
public void addFirst(long element)
```


[Back to member summary](#member-summary)

<a name="member-removeFirst-28--29-"></a>

### `removeFirst()`

```java
public long removeFirst()
```


[Back to member summary](#member-summary)

<a name="member-removeLast-28--29-"></a>

### `removeLast()`

```java
public long removeLast()
```


[Back to member summary](#member-summary)

<a name="member-insert-28-int-2c-long-29-"></a>

### `insert(int,long)`

```java
public void insert(int index, long element)
```


[Back to member summary](#member-summary)

<a name="member-get-28-int-29-"></a>

### `get(int)`

```java
public long get(int index)
```


[Back to member summary](#member-summary)

<a name="member-set-28-int-2c-long-29-"></a>

### `set(int,long)`

```java
public long set(int index, long element)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-int-29-"></a>

### `remove(int)`

```java
public long remove(int index)
```


[Back to member summary](#member-summary)

<a name="member-contains-28-long-29-"></a>

### `contains(long)`

```java
public boolean contains(long element)
```


[Back to member summary](#member-summary)

<a name="member-indexOf-28-long-29-"></a>

### `indexOf(long)`

```java
public int indexOf(long element)
```


[Back to member summary](#member-summary)

<a name="member-lastIndexOf-28-long-29-"></a>

### `lastIndexOf(long)`

```java
public int lastIndexOf(long element)
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<LongHolder> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
